force-app/main/default/objects/Avalibility__c/Avalibility__c.object-meta.xml
<CustomObject>
    <label>Avalibility</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Avalibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>