force-app/main/default/objects/Avalibility__c/fields/Linked_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Linked_Calendar__c</fullName>
    <label>Linked Calendar</label>
    <length>18</length>
    <type>Text</type>
</CustomField>