force-app/main/default/objects/Avalibility__c/fields/Linked_Event__c.field-meta.xml
<CustomField>
    <fullName>Linked_Event__c</fullName>
    <label>Linked Event</label>
    <length>18</length>
    <type>Text</type>
</CustomField>