force-app/main/default/objects/Avalibility__c/listViews/allSelection_Avalibility.listView-meta.xml
<ListView>
    <fullName>allSelection_Avalibility</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>